<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- @string/app_name -->
    <string name="app_name">Student Org Manager</string>
    <string name="action_settings">Settings</string>
    <string name="button_send">Send</string>
    <string name="hello_world">Hello world!</string>
    <string name="myOrganizations">My Organizations</string>
    <string name="title_activity_orgs">OrgsActivity</string>
    <string name="title_activity_homepage">My Organizations</string>
    <string name="AnOrg">An Organization</string>
    <string name="newsfeed">News Feed</string>
    <string name="roster">Roster</string>
    <string name="dues">Dues</string>
    <string name="options">Options</string>
    <string name="messages">Messages</string>
    <string name="profile">Profile</string>
    <string name="calendar">Calendar</string>
    <string name="events">Events</string>
    <string name="title_activity_roster">RosterActivity</string>
    <string name="title_activity_organization_list">Organization List</string>
    <string name="title_activity_all_users">All Users</string>
    <string name="title_activity_edit_users">Edit Users</string>
    <string name="addMember">Add Member</string>
    <string name="hostName">localhost</string>
    <string name="addOrg">Browse for an organization or create a new one to get started!</string>
    <string name="createNewOrg">Create new Org</string>
    <string name="searchForOrgs">Browse for Orgs</string>
    <string name="title_activity_create_user">Register</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="confirmPassword">Confirm Password</string>
    <string name="email">Email</string>
    <string name="title_activity_create_org">CreateOrgActivity</string>
    <string name="orgName">Organization Name</string>
    <string name="orgTypeLabel">Organization Type</string>
    <string name="create">Create</string>
    <string name="title_activity_orgs_browse">Browse Public Organizations</string>
    <string name="type">Type</string>
    <string name="size">Size</string>
    <string name="annualDues">Annual Dues</string>

    <string-array name="group_types">
        <item>Public</item>
        <item>Private</item>
    </string-array>
    <string-array name="event_types">
        <item>Meeting</item>
        <item>Social</item>
        <item>Volunteering</item>
    </string-array>

    <string name="title_activity_orgs_public">Organization</string>
    <string name="title_activity_profile">My Profile</string>
    <string name="title_activity_news_feed">News Feed</string>
    <string name="title_activity_mail_box">MailBox</string>
    <string name="title_activity_message_view">Message View</string>
    <string name="title_activity_public_profile">Profile</string>
    <string name="title_activity_report_absence">Report Absence</string>
    <string name="title_activity_event">Events</string>
    <string name="title_activity_view_absences">View Absences</string>
    <string name="title_activity_new_event">New Event</string>
    <string name="title_activity_admin_dues">Dues Management</string>
    <string name="title_activity_reg_dues">Dues Status</string>
    <string name="title_activity_manage_officers">ManageOfficersActivity</string>
    <string name="title_activity_view_officers">ViewOfficersActivity</string>

</resources>
