<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <TextView
        android:id="@+id/orgTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="@string/AnOrg"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <Button
        android:id="@+id/rosterButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/orgTitle"
        android:text="@string/roster" />

    <Button
        android:id="@+id/eventsButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_centerVertical="true"
        android:text="@string/events" />

    <Button
        android:id="@+id/profileButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:text="@string/profile" />

    <Button
        android:id="@+id/optionsButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:text="@string/options" />

    <Button
        android:id="@+id/deleteOrgBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/optionsButton"
        android:layout_alignBottom="@+id/optionsButton"
        android:layout_centerHorizontal="true"
        android:text="Delete Org" />

    <Button
        android:id="@+id/newsfeedButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/rosterButton"
        android:layout_alignBottom="@+id/rosterButton"
        android:layout_alignRight="@+id/duesButton"
        android:text="@string/newsfeed" />

    <Button
        android:id="@+id/duesButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/optionsButton"
        android:layout_centerVertical="true"
        android:text="@string/dues" />

</RelativeLayout>
