<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".RosterActivity" >

    <TextView
        android:id="@+id/orgTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="@string/AnOrg"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/rosterLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/orgTitle"
        android:layout_centerHorizontal="true"
        android:text="@string/roster"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <ListView
        android:id="@+id/membersListView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/addMemberButton"
        android:layout_below="@+id/rosterLabel"
        android:layout_centerHorizontal="true" >

    </ListView>

    <Button
        android:id="@+id/addMemberButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:text="@string/addMember" />

</RelativeLayout>
